# mapping

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
inc/: dataTypes.hpp  typeData.hpp
src/: convert.cpp  convert.hpp  filters.cpp  filters.hpp  mapping.cpp  mapping.hpp  math.cpp  math.hpp
